2003-02-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/InputStreamReader/jdk11.java (test): Just check
	that encoding is non-null when opened and null when closed. Checking
	the actual encoding name is as good as impossible pre 1.4.

2003-02-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/jar/JarFile/basic.java: Don't test order,
	only test that all entries have the correct content.

2003-02-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/BufferedOutputStream/interrupt.java (test): In
	theory what happens when a InterruptedIOException is thrown should be
	in the specification, in practice it is never defined.

2003-02-12  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/String/getBytes14.java: Added `Uses'.

	* gnu/testlet/java/io/InputStreamReader/jdk11.java (test):
	InputStreamReader should be ready().

2003-02-09  Raif S. Naffah  <raif@fl.net.au> 

	* gnu/testlet/java/lang/String/getBytes13.java: new test
	* gnu/testlet/java/lang/String/getBytes14.java: new test

2003-02-09  Raif S. Naffah  <raif@fl.net.au> 

	* gnu/testlet/java/security/SecureRandom/SHA1PRNG.java: new test, 
	verifies that two similarly seeded SecureRandom objects produce the
	same results.

2003-02-07  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/text/CollationElementIterator/jdk11.java (test):
	Add index to check() message to make it easier to see which test
	actually fails. Necessary when using xfails file.

2003-02-05  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/util/jar/JarFile/basic.java: compilation error fixed

2003-02-04  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/beans/PropertyDescriptorTest.java: added
	more tests for the 2 introspective constructors
	* gnu/testlet/java/lang/Class/ClassTest.java (test_getName):
	test behaviour of getName for void and primitive type classes.

2003-02-03  John Leuner  <jewel@debian.org>
	
	* gnu/testlet/java/util/zip/InflaterInputStream/basic.java: new test