@@ -3,6 +3,7 @@
 	* gnu/testlet/java/io/InputStreamReader/jdk11.java (test): Just check
 	that encoding is non-null when opened and null when closed. Checking
 	the actual encoding name is as good as impossible pre 1.4.
+	* gnu/testlet/java/io/OutputStreamWriter/jdk11.java (test):Likewise.
 
 2003-02-13  Mark Wielaard  <mark@klomp.org>
 
